@@ -16,12 +16,12 @@ AC_CONFIG_HEADER([config.h])
 #
 # versions
 #
-GWENHYWFAR_VERSION_MAJOR=0
-GWENHYWFAR_VERSION_MINOR=9
-GWENHYWFAR_VERSION_PATCHLEVEL=15
-GWENHYWFAR_VERSION_BUILD=5
+GWENHYWFAR_VERSION_MAJOR=1
+GWENHYWFAR_VERSION_MINOR=0
+GWENHYWFAR_VERSION_PATCHLEVEL=0
+GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="cvs"
+GWENHYWFAR_VERSION_TAG="stable"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
