@@ -1,4 +1,9 @@
 
+===========================================================================
+MARK: released gwenhywfar-1.0.0 (2004/09/02)
+===========================================================================
+
+
 2004/09/01: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added a tool which allows me to create simple data containers more easily
